--- a/moquepon.html
+++ b/moquepon.html
@@ -23,10 +23,8 @@
             
             <h2 class="subtitulo">Elige a tu ataque:</h2>
 
-            <div class="tarjetas-ataques">
-                <button id="boton_fuego" class="boton_de_ataque">Fuego 🔥</button>
-                <button id="boton_agua" class="boton_de_ataque">Agua 💧</button>
-                <button id="boton_tierra" class="boton_de_ataque">Tierra 🪨</button>
+            <div id="contenedorAtaques" class="tarjetas-ataques">
+              
             </div>
 
             <div id="Mensajes">
