--- a/moquepon.html
+++ b/moquepon.html
@@ -18,6 +18,12 @@
             <button id="boton_mascota">seleccionar</button>
         </section>
 
+        <section id="ver-mapa">
+            <h1 class="titulo">Recorre el mapa con tu mokepon</h1>
+            <canvas id="mapa"></canvas>
+            <button onClick="moverCapipepo()">Mover</button>
+        </section>
+
         <section id="seleccionar_ataque"> 
             <h1 class="titulo">MOKEPON🔥💧🪨</h1>
             
@@ -37,12 +43,12 @@
     
             <div class="ataques">
                 <div class="ataques-jugador">
-                    <p id="vidas-jugador">3</p>
+                    <p id="vidas-jugador">0</p>
                     <p id="mascota-jugador"></p> 
                     <div id="ataques-del-jugador"></div>
                 </div>
                 <div class="ataques-enemigo">
-                    <p id="vidas-enemigo">3</p>
+                    <p id="vidas-enemigo">0</p>
                     <p id="mascota-enemigo"></p>
                     <div id="ataques-del-enemigo"></div>
                 </div>
